tests/parse_print/autogen/320~final/stderr.expected
Error:
    Parser error in file: tests/parse_print/autogen/320~final/spec.essence Error is:
ValidatorError tests/parse_print/autogen/320~final/spec.essence:5:5:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from bool

tests/parse_print/autogen/320~final/spec.essence:5:45:
  |
5 |     (partition() : `partition from bool`) - partition({false}) in
  |                                             ^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"Number / set/ mset / relation / function"
	Got: partition from bool
